npm install react react-dom -E

--- a/projects/04-react-prueba-tecnica/package.json
+++ b/projects/04-react-prueba-tecnica/package.json
@@ -12,6 +12,8 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "4.3.1"
+    "@vitejs/plugin-react": "4.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
