--- a/projects/04-react-prueba-tecnica/package.json
+++ b/projects/04-react-prueba-tecnica/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "4.3.1",
+    "playwright": "^1.45.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   }
